--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Absterrg0/fixera-server#readme",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
@@ -30,6 +31,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "twilio": "^5.8.0",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
