--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.4"
