--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
     "@aws-sdk/client-s3": "^3.879.0",
     "@aws-sdk/s3-request-presigner": "^3.879.0",
     "@getbrevo/brevo": "^3.0.1",
+    "@types/pdfkit": "^0.17.3",
+    "@types/stripe": "^8.0.416",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
+    "pdfkit": "^0.17.2",
+    "stripe": "^20.0.0",
     "twilio": "^5.8.0"
   },
   "devDependencies": {
