--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "luxon": "^3.5.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "google-libphonenumber": "^3.2.44",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "twilio": "^5.8.0"
